--- a/src/components/projectQuestions/_project-questions.sass
+++ b/src/components/projectQuestions/_project-questions.sass
@@ -2,10 +2,12 @@
   display: flex
   flex: 1
   &__sidebar
-    max-width: 342px
+    max-width: 300px
     width: 100%
     border-right: 1px solid $borderColor
     padding: 40px 15px 40px 0
+    &-close
+      display: none
     &-title
       font-size: 14px
       font-weight: 700
@@ -226,3 +228,71 @@
     padding-top: 30px
     text-align: right
     border-top: 1px solid $borderColor
+
+
++r($lg)
+  .project-questions
+    &__content
+      padding-top: 20px
+    &__item
+      padding-right: 0
+    &__sidebar
+      padding-top: 0
+      margin-left: -10px
+      padding-right: 0
+      transition: all 0.25s ease-in-out
+      &.is-hide
+        margin-left: -265px
+      &-head
+        display: flex
+        align-items: center
+        padding-right: 8px
+      &-close
+        display: flex
+        width: 28px
+        height: 28px
+        border: 1px solid $borderColor
+        border-radius: 50%
+        background: $colorBg
+        margin-left: auto
+        align-items: center
+        justify-content: center
+        span
+          width: 6px
+          height: 6px
+          border: 1px solid #A3ABC2
+          display: block
+          content: ''
+          transform: rotate(135deg)
+          border-left: none
+          border-top: none
+          transition: all 0.25s ease-in-out
+          margin-right: -2px
+        &.is-hide
+          span
+            transform: rotate(315deg)
+            margin-left: -2px
+      &-title
+        padding: 12px 10px 12px 10px
+      &-item
+        border-top: 1px solid $borderColor
+        padding-left: 0
+        &.main
+          &:last-child
+            border-bottom: 1px solid $borderColor
+        &:after
+          display: none
+        a
+          width: 100%
+          padding: 12px 30px 12px 30px
+          &:after
+            left: auto
+            right: 19px
+            top: 50%
+            transform: translateY(-50%) rotate(-45deg)
+        &.is-open
+          a
+            &:after
+              top: 50%
+              transform: translateY(-50%) rotate(-45deg)
+
