--- a/src/components/tile/_tile.sass
+++ b/src/components/tile/_tile.sass
@@ -3,7 +3,7 @@
   display: flex
   flex-direction: column
   position: relative
-  padding: 25px 20px 24px
+  padding: 21px 20px 21px
   height: 100%
   border: 1px solid $borderColor
   border-radius: 4px
@@ -77,3 +77,100 @@
   &__selected
     color: $colorLight
     cursor: pointer
+  &__select
+    margin-bottom: 9px
+    &-row
+      display: flex
+      align-items: center
+      margin-top: auto
+      p
+        margin: -2px 10px 0 0
+    .chosen-single
+      background: transparent
+      border-color: transparent
+      span
+        font-size: 16px
+        font-weight: 700
+        line-height: normal
+        margin: 0
+        height: auto
+        color: $fontColor
+      div
+        display: none
+  .chosen-search
+    display: none
+  .chosen-drop
+    &:after
+      display: block
+      position: absolute
+      content: ''
+      width: 90%
+      left: 5%
+      top: 0
+      height: 10px
+      background: #fff
+  .chosen-results
+    position: relative
+    z-index: 2
+  &__input
+    width: 100%
+    input
+      margin: auto 0 0
+      min-height: 21px
+      transition: color .25s $ease
+      font-size: 14px
+      border: none
+      background: transparent
+      width: 100%
+      color: $fontColor
+      font-family: $baseFont
+      &::-webkit-input-placeholder
+        color: $fontColor
+
+      &::-moz-placeholder
+        color: $fontColor
+
+      &:-ms-input-placeholder
+        color: $fontColor
+
+      &:-moz-placeholder
+        color: $fontColor
+  &--access
+
++r($lg)
+  .tile
+    padding: 0
+    &--access
+      h3
+        padding: 15px 20px
+        // min-height: 68px
+        margin-bottom: 0
+    &__select
+      margin-bottom: 0
+      border-bottom: 1px solid $borderColor
+      .chosen-container
+        display: block
+        padding: 15px 15px 15px 20px
+        width: 100%
+      .chosen-single
+        line-height: 1
+        height: 20px
+        padding-right: 15px
+        span
+          display: block
+          overflow: hidden
+          text-overflow: ellipsis
+        div
+          right: 2px
+          height: 20px
+          display: block
+      &-row
+        padding: 15px 20px
+        margin-top: auto
+        border-top: 1px solid $borderColor
+    &__input
+      input
+        padding: 17px 20px
+    &__btn-delete
+      top: 5px
+      right: 9px
