--- a/src/pug/project-questions.pug
+++ b/src/pug/project-questions.pug
@@ -17,7 +17,10 @@ block content
           //- ._inner
           .project-questions
             .__sidebar
-              p.__sidebar-title Разработка интернет-магазина
+              .__sidebar-head
+                p.__sidebar-title Разработка интернет-магазина
+                a.__sidebar-close.js-sidebar-hide(href="#")
+                  span
               .__sidebar-item.main
                 a.js-open-parent(href="#") Нужен ли вам маркетинг?
                 .__sidebar-item
