fix forms tablet

--- a/src/components/projectCard/_project-card.sass
+++ b/src/components/projectCard/_project-card.sass
@@ -158,6 +158,12 @@
       justify-content: flex-start
       .btn
         margin-right: 50px
+      &--forms
+        flex-direction: row
+        align-items: stretch
+        .btn
+          margin-right: 0
+          margin-left: 10px
 
     &__date
       margin-top: 15px
