--- a/src/components/tile/_tile.sass
+++ b/src/components/tile/_tile.sass
@@ -145,6 +145,11 @@
         padding: 15px 20px
         // min-height: 68px
         margin-bottom: 0
+    &--editable
+      padding: 21px 20px
+      min-height: 100px
+      .tile__heading
+        margin-bottom: 0
     &__select
       margin-bottom: 0
       border-bottom: 1px solid $borderColor
