some fixes, up progress

--- a/src/components/pagenav/_pagenav.pug
+++ b/src/components/pagenav/_pagenav.pug
@@ -2,7 +2,7 @@
 .pagenav
   .pagenav__list
     a.pagenav__link(href='#' title='') 1
-    a.pagenav__link(href='#' title='') ...
+    span.pagenav__link.pagenav__link--separator ...
     a.pagenav__link(href='#' title='') 10
     a.pagenav__link(href='#' title='') 11
     a.pagenav__link.pagenav__link--current(href='#' title='') 12
