--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -1,7 +1,7 @@
 // MADE WITH LOVE BY <> KHMELEVSKOY & ASSOCIATES </> www.khmelevskoy.co
 meta(charset="utf-8")
 title= title || 'Page name'
-meta(http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE")
+meta(http-equiv="X-UA-Compatible" content="IE=EDGE")
 meta(name="viewport" content="width=device-width, initial-scale=1")
 meta(name="theme-color" content="#fff")
 meta(name="format-detection" content="telephone=no")
@@ -28,14 +28,14 @@ meta(name="keywords" content="Key, words")
 meta(name="author" content="Site name")
 
 // og meta
-meta(property='og:title', content='Site name')
-meta(property='og:url', content='https://projectname.surge.sh')
+meta(property='og:title', content='OCMS')
+meta(property='og:url', content='https://ocms2.surge.sh')
 meta(property='og:image', content='https://projectname.surge.sh/img/og/1_1080х607.jpg')
-meta(property='og:description', content='Site name')
-meta(name='twitter:title', content='Site name')
-meta(name='twitter:description', content='Site name')
+meta(property='og:description', content='OCMS — сервис для быстрого создания проектов и задач')
+meta(name='twitter:title', content='OCMS')
+meta(name='twitter:description', content='OCMS — сервис для быстрого создания проектов и задач')
 meta(name='twitter:image:src', content='https://projectname.surge.sh/img/og/1_1200х628.jpg')
-meta(name='twitter:url', content='https://projectname.surge.sh')
+meta(name='twitter:url', content='https://ocms2.surge.sh')
 
 // remove for production
 meta(name="robots" content="noindex")
