--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -30,6 +30,7 @@
   &--inline
     display: flex
     align-items: flex-start
+    margin-bottom: 20px
 
     > label:not(.ui-input__validation)
       flex: 0 0 150px
