--- a/src/components/mainHeader/_mainHeader.pug
+++ b/src/components/mainHeader/_mainHeader.pug
@@ -80,7 +80,7 @@ mixin mainHeader(title, action,  menuType, filters)
               option(value='Анкета 4') Анкета 4
               option(value='Анкета 5') Анкета 5
           .main-header__filter
-            p Любой
+            p Доступ
             select.js-select-chosen
               option(value="Любой" selected) Любой
               option(value='Полный доступ') Полный доступ
