sortable shared ui, up progress

--- a/src/pug/form-passport.pug
+++ b/src/pug/form-passport.pug
@@ -19,7 +19,7 @@ block content
           a.passport-hidden__close.js-close-passport-add(href="#")
             +svgMono("crest")
           p.passport-hidden__title Значения списка
-          .passport-hidden__rows#sortablePassport
+          .passport-hidden__rows.js-sortable
             .passport-hidden__row
               a.passport-hidden__icon.handle(href="#")
                 +svgMono("lines")
@@ -63,7 +63,7 @@ block content
                 p.content-info__hidden-info Как было показано выше, заимствование существенно редуцирует имидж. Позиционирование на рынке программирует метод изучения рынка. М.М.Бахтин понимал тот факт, что дольник приводит конструктивный рейтинг.
 
             .content-grid._grid
-              ._inner.content-grid__counter#sortable
+              ._inner.content-grid__counter.js-sortable
                 ._column
                   .tile.tile--passport
                     p.tile__number
