--- a/src/pug/form-questions.pug
+++ b/src/pug/form-questions.pug
@@ -90,7 +90,7 @@ block content
                       label.ui-toggle._ui-toggle
                         input._input(type='checkbox' name='test_12')
                         span._handle
-              .form-questions__items#sortable
+              .form-questions__items.js-sortable
                 .form-questions__item
                   .form-questions__item-head
                     p.form-questions__answer ответ 1
